<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="?android:attr/fingerprintAuthDrawable"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_developers"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_developers" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
        <item android:title="@string/github"
            android:id="@+id/nav_github"
            android:icon="@drawable/ic_sync_black_24dp" />
    </group>

    <item android:title="@string/comunicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
            <item
            android:id="@+id/nav_cam"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_cam" />
        </menu>
    </item>

</menu>
